--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@use './variables' as v;
+
+
 .App {
   text-align: center;
 }
@@ -14,7 +17,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: v.$primary;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
