More minor adjustments

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -6,7 +6,7 @@
   background-color: v.$primary;
   display: flex;
   align-items: center;
-  .nav-bar-logo {
+  .app-bar-logo {
     height: 40px;
     margin-left: 20px;
     margin-right: 20px;
