--- a/src/variables.scss
+++ b/src/variables.scss
@@ -33,3 +33,10 @@ $warning: $yellow;
 $danger: $red;
 $light: $gray-100;
 $dark: #2b2b2b;
+
+:export {
+    primary: $primary;
+    secondary: $secondary;
+    tertiary: $tertiary;
+    dark: $dark;
+}
