Adding support for token copy to domain page

--- a/src/components/Domains/Domain.scss
+++ b/src/components/Domains/Domain.scss
@@ -7,10 +7,10 @@
 
 .verified {
   @extend .roundIconBorder;
-  color: green;
+  color: darkgreen;
 }
 
 .unverified {
   @extend .roundIconBorder;
-  color: red;
+  color: darkred;
 }
