--- a/src/variables.scss
+++ b/src/variables.scss
@@ -21,12 +21,10 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black: #000;
 
-
-$font-stack: Helvetica,
-sans-serif;
-$primary: #0E2E3F;
-$secondary: #185A7D;
-$tertiary: #4197CB;
+$font-stack: Helvetica, sans-serif;
+$primary: #0e2e3f;
+$secondary: #185a7d;
+$tertiary: #4197cb;
 $success: $green;
 $info: $cyan;
 $warning: $yellow;
