--- a/src/components/Mods/Modules.scss
+++ b/src/components/Mods/Modules.scss
@@ -1,56 +1,56 @@
 .moduleListItem {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .accordion {
-  .accordion-summary {
-    color: #0E2E3F;
-    background-color: #eee;
-    border-left: 15px solid #0E2E3F;
-    margin-bottom: 5px;
-    box-shadow: none !important;
-    span {
-      font-family: Calibri, 'Trebuchet MS', sans-serif;
-      text-transform: lowercase;
+    .accordion-summary {
+        color: #0e2e3f;
+        background-color: #eee;
+        border-left: 15px solid #0e2e3f;
+        margin-bottom: 5px;
+        box-shadow: none !important;
+        span {
+            font-family: Calibri, 'Trebuchet MS', sans-serif;
+            text-transform: lowercase;
+        }
+        & :before {
+            top: 0px !important;
+        }
     }
-    & :before {
-      top: 0px !important;
-    }
-  }
 }
 
 .module-header {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .module-type {
-  padding: 6px 2px;
-  background-color: #db9b75;
-  color: #fff;
-  font-size: 14px;
-  font-weight: 600;
-  text-align: center;
-  border-radius: 5px;
+    padding: 6px 2px;
+    background-color: #db9b75;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    border-radius: 5px;
 }
 
 .module-info {
-  font-size: 14px !important;
+    font-size: 14px !important;
 }
 
 .Mui-expanded {
-  margin: 0px !important;
-  .MuiAccordionSummary-gutters {
-    margin-bottom: 0px !important;
-  }
+    margin: 0px !important;
+    .MuiAccordionSummary-gutters {
+        margin-bottom: 0px !important;
+    }
 }
 
 .MuiAccordion-gutters {
-  box-shadow: none !important;
+    box-shadow: none !important;
 }
 
 .MuiPaper-root {
-  & :before {
-    background-color: none !important;
-  }
+    & :before {
+        background-color: none !important;
+    }
 }
